enhance TransactionController, JwtService, AdminService, DashboardService, and TransactionService with debug logging and improved error handling